services/kubernetes/default/red.yml
apiVersion: v1
kind: Service
metadata:
  name: red
  labels:
    app: red
spec:
  ports:
    - port: 5678
  selector:
    app: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
        - name: red
          image: hashicorp/http-echo
          args:
            - "-text=<body bgcolor='#ff8080'><h3>Red Svc</h3> <br>path:/redsvc</body>"
